--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img src="./assets/img/1.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://made-in-pixel.netlify.app" target=”_blank”>Made in Pixel</a><br><span>Site de Vendas</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -60,7 +60,7 @@
                         <img src="./assets/img/2.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://duelo-estelar.netlify.app" target="_blank">Duelo Estelar</a><br><span>Jogo de Nave</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -76,7 +76,7 @@
                         <img src="./assets/img/3.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://portifolio-react-js.netlify.app" target="_blank">Portifólio</a><br><span>feito em React Js</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -92,7 +92,7 @@
                         <img src="./assets/img/4.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://the-climb-fit.netlify.app" target="_blank">the climb fit</a><br><span>Site de academia</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -108,7 +108,7 @@
                         <img src="./assets/img/5.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://do-you-know-test.netlify.app" target="_blank">Do you know</a><br><span>Jogo de perguntas</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -124,7 +124,7 @@
                         <img src="./assets/img/1.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://made-in-pixel.netlify.app" target=”_blank”>Made in Pixel</a><br><span>Site de Vendas</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -140,7 +140,7 @@
                         <img src="./assets/img/2.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://duelo-estelar.netlify.app" target="_blank">Duelo Estelar</a><br><span>Jogo de Nave</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
@@ -156,7 +156,7 @@
                         <img src="./assets/img/3.jpeg" alt="">
                     </div>
                     <div class="textBx">
-                        <h2><a href="">Made in Pixel</a><br><span>Site de Vendas</span></h2>
+                        <h2><a href="https://portifolio-react-js.netlify.app" target="_blank">Portifólio</a><br><span>feito em React Js</span></h2>
                         <ul class="sci">
                             <li><a href="#"><i class="fa-brands fa-square-facebook"></i></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
